--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
   "license": "No License",
   "devDependencies": {
     "gulp": "~3.6.2",
-    "gulp-rename": "~1.2.0",
-    "gulp-concat": "~2.2.0",
-    "gulp-uglify": "~0.3.0"
+    "gulp-shell": "~0.2.5",
+    "gulp-clean": "~0.3.0"
   }
 }
