--- a/.jshintrc
+++ b/.jshintrc
@@ -32,7 +32,7 @@
     "forin"         : true,     // Tolerate `for in` loops without `hasOwnPrototype`.
     "immed"         : true,     // Require immediate invocations to be wrapped in parens e.g. `( function(){}() );`
     "latedef"       : true,     // Prohibit variable use before definition.
-    "newcap"        : true,     // Require capitalization of all constructor functions e.g. `new F()`.
+    "newcap"        : false,    // Require capitalization of all constructor functions e.g. `new F()`.
     "noarg"         : true,     // Prohibit use of `arguments.caller` and `arguments.callee`.
     "noempty"       : true,     // Prohibit use of empty blocks.
     "nonew"         : true,     // Prohibit use of constructors for side-effects.
@@ -111,13 +111,12 @@
  
     "maxerr"        : 100,      // Maximum errors before stopping.
     "predef"        : [         // Extra globals.
-        "$",
         "Bridge",
         "console",
         "CryptoJS",
         "define",
         "describe",
-        "jQuery",
+        "localStorage",
         "module",
         "require"
     ],
