--- a/bower.json
+++ b/bower.json
@@ -1,22 +1,34 @@
 {
   "name": "bridge-client",
-  "version": "0.2.2",
-  "main": "./lib/bridge-client.min.js",
+  "description": "The client-side application of Axon Bridge, a simple uniform interface for providing API services to browser-based applications.",
+  "version": "0.2.3",
+  "main": [
+    "./lib/BridgeClient.js"
+  ],
+  "license": [
+    "LICENSE.md"
+  ],
   "ignore": [
-    "**/.*",
-    "example",
-    "lib",
     "node_modules",
     "src",
     ".gitignore",
     ".jshintrc",
     "bridge-client.sublime-project",
-    "build.js",
-    "build.min.js",
-    "build-end.frag.js",
-    "build-start.frag.js",
     "gulpfile.js",
-    "package.json",
-    "README.md"
-  ]
+    "package.json"
+  ],
+  "keywords": [
+
+  ],
+  "authors": [
+    "Jeff Rose", "Jeff Rose <jrose0@gmail.com>",
+    "James Zinger", "James Zinger <Joey.Zinger.99@gmail.com>"
+  ],
+  "homepage": "https://bitbucket.org/axoninteractive/bridge-client/wiki/Home",
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@bitbucket.org/axoninteractive/bridge-client"
+  },
+  "dependencies": {},
+  "devDependencies": {}
 }
