--- a/bower.json
+++ b/bower.json
@@ -22,7 +22,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git://git@bitbucket.org/axoninteractive/bridge-client"
+    "url": "git://bitbucket.org/axoninteractive/bridge-client.git"
   },
   "license": "MIT",
   "main": [
