--- a/package.json
+++ b/package.json
@@ -38,5 +38,8 @@
     "vinyl-source-stream": "latest",
     "gulp-rename": "latest",
     "gulp-streamify": "latest"
+  },
+  "scripts": {
+    "update": "git reset --hard && git pull"
   }
 }
