Updated bower.json to not ignore the package.json, since it's necessary to update the client via npm commands.

--- a/bower.json
+++ b/bower.json
@@ -32,11 +32,6 @@
   "devDependencies": {},
   "ignore": [
     "node_modules",
-    "src",
-    ".gitignore",
-    ".jshintrc",
-    "bridge-client.sublime-project",
-    "gulpfile.js",
-    "package.json"
+    "bridge-client.sublime-project"
   ]
 }
