Removed the npm update script because it was just causing havoc. Better solutions about in PEIR itself.

--- a/bower.json
+++ b/bower.json
@@ -37,6 +37,7 @@
     ".jshintrc",
     "bridge-client.sublime-project",
     "bridge-client.sublime-workspace",
-    "gulpfile.js"
+    "gulpfile.js",
+    "package.json"
   ]
 }
