--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
-node_modules/
+# Installed dependencies
+node_modules
+bower_components
 
+# Sublime files
+*.sublime-project
 *.sublime-workspace
+
+# Log files
+*.log
