--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "axon-bridge-client",
-  "version": "0.2.10",
+  "version": "0.2.11",
   "description": "The browser library portion of Bridge, a simple uniform interface for providing API services to browser-based applications.",
   "contributors": [
     {
       "name": "Axon Interactive Inc.",
-      "email": "theteam@axoninteractive.ca"
+      "email": "theteam@axoninteractive.ca",
+      "url": "axoninteractive.ca"
     },
     {
       "name": "Jeff Rose",
@@ -33,5 +34,6 @@
     "gulp-uglify": "1.1.0",
     "vinyl-source-stream": "1.0.0"
   },
+  "scripts": {},
   "keywords": []
 }
