Quick fix to bower.json.

--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,8 @@
   "authors": [
     {
       "name": "Axon Interactive Inc.",
-      "email": "theteam@axoninteractive.ca"
+      "email": "theteam@axoninteractive.ca",
+      "url": "axoninteractive.ca"
     },
     {
       "name": "Jeff Rose",
